--- a/quiz-start.html
+++ b/quiz-start.html
@@ -5,50 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tasty Trivia</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class= "navbar">
+        <div class = "logo logotwo">
+            <img src="logo.PNG" alt ="logo" height= "100">
+        </div>
+    </div>
 
-<h1>Question</h1>
+<h1 id = "question">This is a sample question?</h1>
 
+<div class = "answers">
 <div class="row">
     <div class="column-3">
-        <button class="btn btn-primary btn-sm optbtn" id="aBtn">A</button>
-    </div>
-    <div class="column">
-          <p id="aAnswer">Answer1</p>
+        <button class="btn btn-primary btn-sm optbtn choices" id="aBtn">Choice One</button>
     </div>
 </div>
 <div class="row">
     <div class="column-3">
-        <button class="btn btn-primary btn-sm optbtn" id="bBtn">B</button>
-    </div>
-    <div class="column">
-        <p id="bAnswer">Answer2</p>
+        <button class="btn btn-primary btn-sm optbtn choices" id="bBtn">Choice Two</button>
     </div>
 </div>
 <div class="row">
     <div class="column-3">
-        <button class="btn btn-primary btn-sm optbtn" id="cBtn">C</button>
-    </div>
-    <div class="column">
-        <p id="cAnswer">Answer3</p>
+        <button class="btn btn-primary btn-sm optbtn choices" id="cBtn">Choice Three</button>
     </div>
 </div>
 <div class="row">
     <div class="column-3">
-        <button class="btn btn-primary btn-sm optbtn" id="dBtn">D</button>
+        <button class="btn btn-primary btn-sm optbtn choices " id="dBtn">Choice Four</button>
     </div>
-    <div class="column"></div>
-        <p id="dAnswer">Answer4</p>
-    </div>
+</div>
+
 </div>           
-</div>
-</div>
+
+<div id = "displayimage"> <img src = "sample.jpg" alt = "sample" height= "300"> </div>
         
 </body>
 
