--- a/receivescore.html
+++ b/receivescore.html
@@ -4,36 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Score</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
+    
    
 
     <head>
         </body>
-                <div class="row">
-                    <button type="button" class="btn btn-secondary btn-lg">Your Score</button>
-                    </div>
-                    <div class="row">
-                    <button type="button" class="btn btn-outline-secondary">Score</button>
-                </div>
-                <div  class="row">
-                <button type="button" class="btn btn-secondary btn-sm">Play Again</button>
-                    <button type="button" class="btn btn-secondary btn-sm">Highscore</button>
+
+        <div class= "navbar">
+            <div class = "logo logotwo">
+                <img src="logo.PNG" alt ="logo" height= "100">
+            </div>
+        </div>
+
+            <div id = "receivescore">
+                    <h2 class = "yourscore"> Your Score: </h2>
+                    <h1 class = "score">[Score]</h1>
+                <div  class="row receivescorebuttons">
+                <button type="button" class="btn btn-secondary btn-sm button">Play Again</button>
+                    <button type="button" class="btn btn-secondary btn-sm button">High Scores</button>
                 </div>
 
 
-                <!-- <input id= "input-0" hour-index="0" type="text" class= "dailyPlan">-->
 
             </div>
         </form>
 
-        <!-- Start Footer -->
-        <nav class="navbar fixed-bottom footer">
-            <div class="footer-text">Tasty Trivia</div>
-        </nav>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
