--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
             <img src="logo.PNG" alt ="logo" height= "250">
         </div>
     </div>
-    <form>
+    
+    <form method="post" action="topics.html" id = "form">
         <div class="col-lg-10 mb-3">
           <div class="input-group mycustom">
             <input type="text" class="form-control rounded-0" id="validationDefaultUsername" placeholder="Enter Your Name" aria-describedby="inputGroupPrepend2" required>
             <div class="input-group-prepend">
-              <input type="submit" vlaue="submit" class="btn btn-secondary btn-sm rounded-0" id="inputGroupPrepend2">
+              <input type="submit" id="register" value="Submit" disabled="disabled" class="btn btn-secondary btn-sm rounded-0" id="inputGroupPrepend2" />
             </div>
           </div>
         </div>
       </form>
-    <a href = "highscores.html"> High Scores</a>
+      <a href="highscores.html"> High Scores</a>
+
+
+
 </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="db\index.js"></script>
+
 </html>
