--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
 </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="db\index.js"></script>
+    <script src="models\index.js"></script>
 
 </html>
