--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <div class = "homepage">
     <div class= "navbar">
         <div class = "logo">
             <img src="logo.PNG" alt ="logo" height= "250">
@@ -26,7 +27,7 @@
         </div>
       </form>
       <a href="highscores.html"> High Scores</a>
-
+      <div class = "homepage">  
 
 
 </body>
